tests/negative/malformed_fn_signature.glyph
module neg

fn add(a: number, b: number -> number {
  return a
}
